# rut9xx

./: .config.default  .gitignore  Config.in  Makefile  README  README.md  changelog  feeds.conf.default  gpl_version  rules.mk
package/azure_iothub/src/teltonika_client/: CMakeLists.txt  azure_iothub.c  azure_iothub.conf  azure_iothub.h  azure_iothub.init  cJSON.h  certs.h
package/teltonika/libs/libtwCSdk/src/: CMakeLists.txt
package/teltonika/libs/libtwCSdk/src/src/: CMakeLists.txt  Doxyfile.in  version.rc.in
package/teltonika/libs/libtwCSdk/src/src/api/: twApi.c  twConstants.h  twMacros.h  twPasswds.c  twProperties.c  twProperties.h  twServices.c
package/teltonika/libs/libtwCSdk/src/src/config/: twDefaultSettings.h
package/teltonika/libs/libtwCSdk/src/src/doc/: mainpage.md
package/teltonika/libs/libtwCSdk/src/src/doc/html/: _2zfstream_8h_source.html  annotated.html  blast_8h_source.html  cfu_8h_source.html  cfuconf_8h_source.html  cfuconfig_8h_source.html  cfulist_8h_source.html  cfuopt_8h_source.html  cfuthread__queue_8h_source.html  class_dot_z_lib_1_1_c_r_c32_checksum-members.html  class_dot_z_lib_1_1_c_r_c32_checksum.html  class_dot_z_lib_1_1_checksum_generator_base-members.html  class_dot_z_lib_1_1_checksum_generator_base.html  class_dot_z_lib_1_1_deflater-members.html  class_dot_z_lib_1_1_g_zip_stream-members.html  class_dot_z_lib_1_1_info-members.html  classes.html  classgzfilebuf-members.html  classgzfilebuf.html  classgzfilestream__common.html  classgzifstream.html  classgzomanip.html  classizstream-members.html  classizstream.html  classozstream-members.html  classozstream.html  classzstringlen-members.html  classzstringlen.html  crypto__wrapper_8h.html  deflate_8h_source.html  deprecated.html  dir_036554d9d9a73fc298130dbbfaf82ef5.html  dir_0d36ab9c64c2bea56666b53e799b6483.html  dir_0ef504a89c5328a190397b49e842561b.html  dir_136b44629bd12761f6f0e5f07d4033e8.html  dir_179e16490c9e24d4b90758202d29e437.html  dir_20db799bb85f2e4106263fe39ad7e18d.html  dir_2a439019262d05295eabb3e1415d0f1b.html  dir_2b349babf17c1ec1b940cf24aab514e7.html  dir_2dea432940e1200e1ac17a6eca1cb248.html  (+972 more)
package/teltonika/libs/libtwCSdk/src/src/doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_5.js  all_7.js  all_8.js  all_9.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_11.js  classes_12.js  classes_15.js  classes_4.js  classes_8.js  classes_9.js  (+48 more)
package/teltonika/libs/libtwCSdk/src/src/examples/ExtUseExample/: CMakeLists.txt  ExtUseExample.c
package/teltonika/libs/libtwCSdk/src/src/examples/SteamSensor/: CMakeLists.txt
package/teltonika/libs/libtwCSdk/src/src/examples/simpleextlib/: CMakeLists.txt  simpleshape.c  simpleshape.h
package/teltonika/libs/libtwCSdk/src/src/examples/warehouseextlib/: CMakeLists.txt  warehouse.h
package/teltonika/libs/libtwCSdk/src/src/fileTransfer/: twFileTransferCallbacks.h
package/teltonika/libs/libtwCSdk/src/src/messaging/: twBaseTypes.h  twInfoTable.h  twMessages.h  twMessaging.h
package/teltonika/libs/libtwCSdk/src/src/porting/: twApiWrapper.h  twIos.c  twLinux-openssl.h  twLinux.c  twLinux.h  twPThreads.c  twWin32Threads.c
package/teltonika/libs/libtwCSdk/src/src/primitiveUtils/: twPrimitiveUtils.c  twPrimitiveUtils.h
package/teltonika/libs/libtwCSdk/src/src/shapes/: twShapes.c
package/teltonika/libs/libtwCSdk/src/src/standardProps/: twStandardProps.c
package/teltonika/libs/libtwCSdk/src/src/stubs/: README.txt  twApiStubs.c  twApiStubs.h
package/teltonika/libs/libtwCSdk/src/src/subscribedProps/: twSubscribedProps.c  twSubscribedProps.h
package/teltonika/libs/libtwCSdk/src/src/test/: CMakeLists.txt
package/teltonika/libs/libtwCSdk/src/src/test/etc/: Entities_CSDK_1101.xml  Entities_CSDK_1107.xml  Entities_CSDK_1112.xml  Entities_SubscribedPropertyIntegrationTests.xml  Things_CSDKFileTransferIntegrationTestRepo.xml  Things_CSDK_743.xml  Things_EDGE_2131.xml  Things_EDGE_2131_ValueStream.xml  Things_Fold_Prop_Thing.xml  Things_OfflineMessageStoreIntegrationTestThing.xml  Things_One_Int_Prop2.xml  Things_PropertyPerformanceTestThing_1000_properties.xml  Things_PropertyPerformanceTestThing_100_properties.xml  Things_RegressionThing.xml  Things_SimpleTestThing.xml  Things_testUtils_ImportEntityThing.xml  Things_unityTestThing.xml  alphaTestClientKeyFile  root_cert.pem  root_cert_xl.pem  start-docker-thingworx.bat  test_public_key.pem  testconfig.sample.json  windows_dev_cert.pem
package/teltonika/libs/libtwCSdk/src/src/test/include/: TestServices.h  TestUtilities.h  crossPlatformTestSupport.h  unitTestDefs.h
package/teltonika/libs/libtwCSdk/src/src/test/integration/: ApiIntegrationTests.c  BindingTests.c  CertificateIntegrationTests.c  ExtUseExampleIntegrationTests.c  MetadataIntegrationTests.c  SteamSensorIntegrationTests.c  SubscribedPropertyIntegrationGenericTests.c  SubscribedPropertyIntegrationUniqueTests.c  SynchronizeStateIntegrationTests.c  TestUtilitiesIntegrationTest.c  TunnelingIntegrationTests.c
package/teltonika/libs/libtwCSdk/src/src/test/integration_slow/: BindingIntegrationTestsSlow.c
package/teltonika/libs/libtwCSdk/src/src/test/performance/: BindingPerformanceTests.c  KepwareTests.c  PropertyPerformanceTests.c
package/teltonika/libs/libtwCSdk/src/src/test/src/: TestServices.c  TestUtilities.c  crossPlatformTestSupport.c  testmain.c
package/teltonika/libs/libtwCSdk/src/src/test/unit/: CMakeLists.txt
package/teltonika/libs/libtwCSdk/src/src/test/unity/: CMakeLists.txt  unity_fixture.c  unity_fixture.h
package/teltonika/libs/libtwCSdk/src/src/tls/: twConnectionInfo.c  twNoTls.h  twOpenSSL.h  twSig.c  twSig.h  twTemplateSSL.h  twTls.c
package/teltonika/libs/libtwCSdk/src/src/tunneling/: twTunnelManager.c  twTunnelManager.h
package/teltonika/libs/libtwCSdk/src/src/utils/: crypto_wrapper.c  stringUtils.c  twDict.c  twDict.h  twHttpProxy.c  twHttpProxy.h  twList.h  twLogger.c  twMap.h  twNtlm.c  twNtlm.h  twTasker.h
package/teltonika/libs/libtwCSdk/src/src/websocket/: twWebsocket.c
(+3663 files in other folders)
